--- a/index.html
+++ b/index.html
@@ -101,6 +101,21 @@
                     <div class="lab-card-icon mb-4">
                         <i class="fa-solid fa-shield-cat"></i>
                     </div>
+                    <h2 class="text-2xl font-bold text-white mb-2">Pre Lab 3</h2>
+                    <p class="text-gray-400 mb-6">
+                        การรักษาความปลอดภัยเว็บแอปพลิเคชัน (งานเดี่ยว)
+                    </p>
+                </div>
+                <a href="./lab3/pre-lab3/" class="btn-primary">
+                    <i class="fas fa-arrow-right mr-2"></i> เข้าสู่ Pre Lab 3
+                </a>
+            </div>
+
+           <div class="lab-card p-8">
+                <div>
+                    <div class="lab-card-icon mb-4">
+                        <i class="fa-solid fa-shield-cat"></i>
+                    </div>
                     <h2 class="text-2xl font-bold text-white mb-2">Lab 3: ???</h2>
                     <p class="text-gray-400 mb-6">
                         ???
