update link pre-lab3 pre-lab3-security-66543210007-1

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         การรักษาความปลอดภัยเว็บแอปพลิเคชัน (งานเดี่ยว)
                     </p>
                 </div>
-                <a href="./lab3/pre-lab3/" class="btn-primary">
+                <a href="./lab3/pre-lab3-security-66543210007-1/" class="btn-primary">
                     <i class="fas fa-arrow-right mr-2"></i> เข้าสู่ Pre Lab 3
                 </a>
             </div>
